# br-helpers

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: build.yml
base/: Cargo.toml
base/src/: diffs.rs  githistory.rs  gitworkspace.rs  lib.rs  mkfile.rs  package.rs  report.rs  utils.rs
utils/brdiff/: Cargo.toml
utils/brdiff/src/: gitdiff.rs  main.rs  pkgdiff.rs  pkginfo.rs
utils/brdiff/src/show_info/: info.rs  mod.rs
utils/brfwd/: Cargo.toml
utils/brfwd/src/: main.rs
utils/brfwd/src/hashfwd/: mod.rs
utils/mk-diff/: Cargo.toml
utils/mk-diff/src/: main.rs  mkfile.rs
utils/show-info-diff/: Cargo.toml
utils/show-info-diff/src/show_info/: info.rs  mod.rs
