[package]
name = "brdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0" , features = ["derive"]}
structopt = { version = "0.3" }
log = { version = "0.4" }
env_logger = { version = "0.9" }
git2 = "0.15.0"
uuid = { version = "1.1.2", features = [ "v4","fast-rng"] }

